--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -92,7 +92,7 @@
         <div class="col-md-6 col-lg-6 col-xl-6 mx-auto mt-3">
           <h6 class="text-uppercase mb-4 font-weight-bold">Descripción</h6>
           <p>
-            descripcion
+            Targebot es una herramienta que permita generar listas de actores y temas a ser usada en la fase de Targeting en la Visión Estratégica utilizando bases de datos académicas y periódicos.
           </p>
         </div>
         <!-- Grid column -->
@@ -103,41 +103,26 @@
   
         <hr class="w-100 clearfix d-md-none">
   
-        <!-- Grid column -->
-        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-          <h6 class="text-uppercase mb-4 font-weight-bold">Useful links</h6>
-          <p>
-            <a href="#!">Your Account</a>
-          </p>
-          <p>
-            <a href="#!">Become an Affiliate</a>
-          </p>
-          <p>
-            <a href="#!">Shipping Rates</a>
-          </p>
-          <p>
-            <a href="#!">Help</a>
-          </p>
-        </div>
+        
   
         <!-- Grid column -->
         <hr class="w-100 clearfix d-md-none">
   
         <!-- Grid column -->
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-          <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
+          <h6 class="text-uppercase mb-4 font-weight-bold">Contactanos</h6>
           <p>
-            <mdb-icon fas icon="home" class="mr-3"></mdb-icon> New York, NY 10012, US
+            <mdb-icon fas icon="home" class="mr-3"></mdb-icon>Ladrón de Guevara E11·253
+            Quito · Ecuador
           </p>
           <p>
-            <mdb-icon fas icon="envelope" class="mr-3"></mdb-icon> info@example.com
+            <mdb-icon fas icon="envelope" class="mr-3"></mdb-icon> Ladrón de Guevara E11·253 [PO·Box 17-01-2759]
+            Quito · Ecuador
           </p>
           <p>
-            <mdb-icon fas icon="phone" class="mr-3"></mdb-icon> + 01 234 567 88
+            <mdb-icon fas icon="phone" class="mr-3"></mdb-icon> + 593 096 3849259
           </p>
-          <p>
-            <mdb-icon fas icon="print" class="mr-3"></mdb-icon> + 01 234 567 88
-          </p>
+          
         </div>
         <!-- Grid column -->
   
@@ -147,51 +132,7 @@
       <hr>
   
       <!-- Grid row -->
-      <div class="row d-flex align-items-center">
-  
-        <!-- Grid column -->
-        <div class="col-md-7 col-lg-8">
-  
-          <!--Copyright-->
-          <p class="text-center text-md-left">© 2020 Copyright:
-            <a href="https://mdbootstrap.com/">
-              <strong> MDBootstrap.com</strong>
-            </a>
-          </p>
-  
-        </div>
-
-        <div class="col-md-5 col-lg-4 ml-lg-0">
-  
-          <div class="text-center text-md-right">
-            <ul class="list-unstyled list-inline">
-              <li class="list-inline-item">
-                <a mdbBtn floating="true" size="sm" class="rgba-white-slight mx-1" mdbWavesEffect>
-                  <mdb-icon fab icon="facebook"></mdb-icon>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a mdbBtn floating="true" size="sm" class="rgba-white-slight mx-1" mdbWavesEffect>
-                  <mdb-icon fab icon="twitter"></mdb-icon>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a mdbBtn floating="true" size="sm" class="rgba-white-slight mx-1" mdbWavesEffect>
-                  <mdb-icon fab fab icon="google-plus"></mdb-icon>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a mdbBtn floating="true" size="sm" class="rgba-white-slight mx-1" mdbWavesEffect>
-                  <mdb-icon fab icon="linkedin"></mdb-icon>
-                </a>
-              </li>
-            </ul>
-          </div>
-  
-        </div>
-        <!-- Grid column -->
-  
-      </div>
+      
       <!-- Grid row -->
   
     </div>
@@ -207,7 +148,7 @@
 
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3"> 
-    <a href="https://mdbootstrap.com/"> Escuela Politécnica Nacional</a>
+    <a href="https://www.epn.edu.ec/"> © 2020 Copyright:Escuela Politécnica Nacional</a>
   </div>
   <!-- Copyright -->
 
