--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -116,8 +116,7 @@
             Quito · Ecuador
           </p>
           <p>
-            <mdb-icon fas icon="envelope" class="mr-3"></mdb-icon> Ladrón de Guevara E11·253 [PO·Box 17-01-2759]
-            Quito · Ecuador
+            <mdb-icon fas icon="envelope" class="mr-3"></mdb-icon> targetbot.epn@gmail.com
           </p>
           <p>
             <mdb-icon fas icon="phone" class="mr-3"></mdb-icon> + 593 096 3849259
